--- a/frontend/src/pages/AdminPage.css
+++ b/frontend/src/pages/AdminPage.css
@@ -23,10 +23,18 @@
 /* LAYOUT DA PÁGINA */
 /* ========================================================== */
 .admin-page-container {
-    padding: 50px;
-    margin: 40px auto;
+    /* padding: 50px;
+    margin: 40px auto; */
+
     font-family: Arial, sans-serif;
     color: #313b2f;
+    background: #833ab4;
+    background: linear-gradient(
+        145deg,
+        rgba(131, 58, 180, 0.4) 0%,
+        rgba(255, 186, 186, 0.4) 50%,
+        rgba(252, 176, 69, 0.4) 100%
+    );
 }
 
 .admin-divider {
@@ -59,7 +67,7 @@
     width: 200px;
     height: 300px;
     border: 1px solid var(--color-text-primary);
-    background-color: #d8c72f;
+    background-color: #3636363d;
     border-radius: 8px;
     box-shadow: 0 0 20px #00000070;
 
@@ -87,7 +95,7 @@
 
 .card-icon {
     /* Estilo do ícone */
-    color: var(--color-background-light); /* Cor do ícone */
+    color: #ffffff; /* Cor do ícone */
     margin: 10px;
     font-size: 40px;
 }
