--- a/frontend/src/pages/ProductsPage.css
+++ b/frontend/src/pages/ProductsPage.css
@@ -28,10 +28,11 @@
 
 .products-grid {
     /* Baseado em style={{ display: 'grid', gridTemplateColumns: 'repeat(4, 1fr)', gap: '20px', marginTop: '30px' }} */
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     margin-top: 30px;
+    flex-wrap: wrap;
 }
 
 /* ... */
@@ -92,6 +93,7 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.05);
     transition: transform 0.2s;
     color: #000000;
+    min-width: 350px;
 }
 
 .product-card:hover {
